exports[`test should render the languages facet with the selected languages 1`] = `
<LanguagesFilter
  facet={
    Object {
      "cs": 4,
      "java": 39,
      "js": 1,
    }
  }
  languages={
    Object {
      "cs": Object {
        "key": "cs",
        "name": "C#",
      },
      "flex": Object {
        "key": "flex",
        "name": "Flex",
      },
      "java": Object {
        "key": "java",
        "name": "Java",
      },
      "js": Object {
        "key": "js",
        "name": "JavaScript",
      },
      "php": Object {
        "key": "php",
        "name": "PHP",
      },
      "py": Object {
        "key": "py",
        "name": "Python",
      },
    }
  }
  query={
    Object {
      "languages": Array [
        "java",
        "cs",
      ],
    }
  }
  router={
    Object {
      "push": [Function],
    }
  }
  value={
    Array [
      "java",
      "cs",
    ]
  }>
  <Filter
    facet={
      Object {
        "cs": 4,
        "java": 39,
        "js": 1,
      }
    }
    getFacetValueForOption={[Function]}
    getOptions={[Function]}
    halfWidth={false}
    languages={
      Object {
        "cs": Object {
          "key": "cs",
          "name": "C#",
        },
        "flex": Object {
          "key": "flex",
          "name": "Flex",
        },
        "java": Object {
          "key": "java",
          "name": "Java",
        },
        "js": Object {
          "key": "js",
          "name": "JavaScript",
        },
        "php": Object {
          "key": "php",
          "name": "PHP",
        },
        "py": Object {
          "key": "py",
          "name": "Python",
        },
      }
    }
    property="languages"
    query={
      Object {
        "languages": Array [
          "java",
          "cs",
        ],
      }
    }
    renderFooter={[Function]}
    renderName={[Function]}
    renderOption={[Function]}
    value={
      Array [
        "java",
        "cs",
      ]
    }>
    <div
      className="search-navigator-facet-box"
      data-key="languages">
      <div
        className="search-navigator-facet-header projects-facet-header">
        Languages
      </div>
      <div
        className="search-navigator-facet-list">
        <Link
          className="facet search-navigator-facet projects-facet active"
          data-key="java"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/projects",
              "query": Object {
                "languages": "cs",
              },
            }
          }>
          <a
            className="facet search-navigator-facet projects-facet active"
            data-key="java"
            onClick={[Function]}
            style={Object {}}>
            <span
              className="facet-name">
              <SearchableFilterOption
                option={
                  Object {
                    "key": "java",
                    "name": "Java",
                  }
                }
                optionKey="java">
                <span>
                  Java
                </span>
              </SearchableFilterOption>
            </span>
            <span
              className="facet-stat">
              39
            </span>
          </a>
        </Link>
        <Link
          className="facet search-navigator-facet projects-facet active"
          data-key="cs"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/projects",
              "query": Object {
                "languages": "java",
              },
            }
          }>
          <a
            className="facet search-navigator-facet projects-facet active"
            data-key="cs"
            onClick={[Function]}
            style={Object {}}>
            <span
              className="facet-name">
              <SearchableFilterOption
                option={
                  Object {
                    "key": "cs",
                    "name": "C#",
                  }
                }
                optionKey="cs">
                <span>
                  C#
                </span>
              </SearchableFilterOption>
            </span>
            <span
              className="facet-stat">
              4
            </span>
          </a>
        </Link>
        <Link
          className="facet search-navigator-facet projects-facet"
          data-key="js"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/projects",
              "query": Object {
                "languages": "java,cs,js",
              },
            }
          }>
          <a
            className="facet search-navigator-facet projects-facet"
            data-key="js"
            onClick={[Function]}
            style={Object {}}>
            <span
              className="facet-name">
              <SearchableFilterOption
                option={
                  Object {
                    "key": "js",
                    "name": "JavaScript",
                  }
                }
                optionKey="js">
                <span>
                  JavaScript
                </span>
              </SearchableFilterOption>
            </span>
            <span
              className="facet-stat">
              1
            </span>
          </a>
        </Link>
      </div>
      <div
        className="search-navigator-facet-footer projects-facet-footer">
        <SearchableFilterFooter
          facet={
            Object {
              "cs": 4,
              "java": 39,
              "js": 1,
            }
          }
          getOptions={[Function]}
          options={
            Object {
              "cs": Object {
                "key": "cs",
                "name": "C#",
              },
              "flex": Object {
                "key": "flex",
                "name": "Flex",
              },
              "java": Object {
                "key": "java",
                "name": "Java",
              },
              "js": Object {
                "key": "js",
                "name": "JavaScript",
              },
              "php": Object {
                "key": "php",
                "name": "PHP",
              },
              "py": Object {
                "key": "py",
                "name": "Python",
              },
            }
          }
          property="languages"
          query={
            Object {
              "languages": Array [
                "java",
                "cs",
              ],
            }
          }
          router={
            Object {
              "push": [Function],
            }
          }
          value={
            Array [
              "java",
              "cs",
            ]
          }>
          <Select
            addLabelText="Add \"{label}\"?"
            arrowRenderer={[Function]}
            autosize={true}
            backspaceRemoves={true}
            backspaceToRemoveMessage="Press backspace to remove {label}"
            className="input-super-large"
            clearAllText="Clear all"
            clearValueText="Clear value"
            clearable={false}
            delimiter=","
            disabled={false}
            escapeClearsValue={true}
            filterOptions={[Function]}
            ignoreAccents={true}
            ignoreCase={true}
            inputProps={Object {}}
            isLoading={false}
            joinValues={false}
            labelKey="label"
            matchPos="any"
            matchProp="any"
            menuBuffer={0}
            menuRenderer={[Function]}
            multi={false}
            noResultsText="No results found"
            onBlurResetsInput={true}
            onChange={[Function]}
            onCloseResetsInput={true}
            openAfterFocus={false}
            optionComponent={[Function]}
            options={
              Array [
                Object {
                  "label": "Flex",
                  "value": "flex",
                },
                Object {
                  "label": "PHP",
                  "value": "php",
                },
                Object {
                  "label": "Python",
                  "value": "py",
                },
              ]
            }
            pageSize={5}
            placeholder="search_verb"
            required={false}
            scrollMenuIntoView={true}
            searchable={true}
            simpleValue={false}
            tabSelectsValue={true}
            valueComponent={[Function]}
            valueKey="value">
            <div
              className="Select input-super-large Select--single is-searchable">
              <div
                className="Select-control"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}>
                <span
                  className="Select-multi-value-wrapper"
                  id="react-select-3--value">
                  <div
                    className="Select-placeholder">
                    search_verb
                  </div>
                  <AutosizeInput
                    aria-activedescendant="react-select-3--value"
                    aria-expanded="false"
                    aria-haspopup="false"
                    aria-owns=""
                    className="Select-input"
                    minWidth="5px"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    role="combobox"
                    value="">
                    <div
                      className="Select-input"
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }>
                      <input
                        aria-activedescendant="react-select-3--value"
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-owns=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          Object {
                            "boxSizing": "content-box",
                            "width": "5pxpx",
                          }
                        }
                        value="" />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        } />
                    </div>
                  </AutosizeInput>
                </span>
                <span
                  className="Select-arrow-zone"
                  onMouseDown={[Function]}>
                  <span
                    className="Select-arrow"
                    onMouseDown={[Function]} />
                </span>
              </div>
            </div>
          </Select>
        </SearchableFilterFooter>
      </div>
    </div>
  </Filter>
</LanguagesFilter>
`;

exports[`test should render the languages without the ones in the facet 1`] = `
<LanguagesFilter
  facet={
    Object {
      "cs": 4,
      "java": 39,
      "js": 1,
    }
  }
  languages={
    Object {
      "cs": Object {
        "key": "cs",
        "name": "C#",
      },
      "flex": Object {
        "key": "flex",
        "name": "Flex",
      },
      "java": Object {
        "key": "java",
        "name": "Java",
      },
      "js": Object {
        "key": "js",
        "name": "JavaScript",
      },
      "php": Object {
        "key": "php",
        "name": "PHP",
      },
      "py": Object {
        "key": "py",
        "name": "Python",
      },
    }
  }
  query={
    Object {
      "languages": null,
    }
  }
  router={
    Object {
      "push": [Function],
    }
  }>
  <Filter
    facet={
      Object {
        "cs": 4,
        "java": 39,
        "js": 1,
      }
    }
    getFacetValueForOption={[Function]}
    getOptions={[Function]}
    halfWidth={false}
    languages={
      Object {
        "cs": Object {
          "key": "cs",
          "name": "C#",
        },
        "flex": Object {
          "key": "flex",
          "name": "Flex",
        },
        "java": Object {
          "key": "java",
          "name": "Java",
        },
        "js": Object {
          "key": "js",
          "name": "JavaScript",
        },
        "php": Object {
          "key": "php",
          "name": "PHP",
        },
        "py": Object {
          "key": "py",
          "name": "Python",
        },
      }
    }
    property="languages"
    query={
      Object {
        "languages": null,
      }
    }
    renderFooter={[Function]}
    renderName={[Function]}
    renderOption={[Function]}>
    <div
      className="search-navigator-facet-box"
      data-key="languages">
      <div
        className="search-navigator-facet-header projects-facet-header">
        Languages
      </div>
      <div
        className="search-navigator-facet-list">
        <Link
          className="facet search-navigator-facet projects-facet"
          data-key="java"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/projects",
              "query": Object {
                "languages": "java",
              },
            }
          }>
          <a
            className="facet search-navigator-facet projects-facet"
            data-key="java"
            onClick={[Function]}
            style={Object {}}>
            <span
              className="facet-name">
              <SearchableFilterOption
                option={
                  Object {
                    "key": "java",
                    "name": "Java",
                  }
                }
                optionKey="java">
                <span>
                  Java
                </span>
              </SearchableFilterOption>
            </span>
            <span
              className="facet-stat">
              39
            </span>
          </a>
        </Link>
        <Link
          className="facet search-navigator-facet projects-facet"
          data-key="cs"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/projects",
              "query": Object {
                "languages": "cs",
              },
            }
          }>
          <a
            className="facet search-navigator-facet projects-facet"
            data-key="cs"
            onClick={[Function]}
            style={Object {}}>
            <span
              className="facet-name">
              <SearchableFilterOption
                option={
                  Object {
                    "key": "cs",
                    "name": "C#",
                  }
                }
                optionKey="cs">
                <span>
                  C#
                </span>
              </SearchableFilterOption>
            </span>
            <span
              className="facet-stat">
              4
            </span>
          </a>
        </Link>
        <Link
          className="facet search-navigator-facet projects-facet"
          data-key="js"
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/projects",
              "query": Object {
                "languages": "js",
              },
            }
          }>
          <a
            className="facet search-navigator-facet projects-facet"
            data-key="js"
            onClick={[Function]}
            style={Object {}}>
            <span
              className="facet-name">
              <SearchableFilterOption
                option={
                  Object {
                    "key": "js",
                    "name": "JavaScript",
                  }
                }
                optionKey="js">
                <span>
                  JavaScript
                </span>
              </SearchableFilterOption>
            </span>
            <span
              className="facet-stat">
              1
            </span>
          </a>
        </Link>
      </div>
      <div
        className="search-navigator-facet-footer projects-facet-footer">
        <SearchableFilterFooter
          facet={
            Object {
              "cs": 4,
              "java": 39,
              "js": 1,
            }
          }
          getOptions={[Function]}
          options={
            Object {
              "cs": Object {
                "key": "cs",
                "name": "C#",
              },
              "flex": Object {
                "key": "flex",
                "name": "Flex",
              },
              "java": Object {
                "key": "java",
                "name": "Java",
              },
              "js": Object {
                "key": "js",
                "name": "JavaScript",
              },
              "php": Object {
                "key": "php",
                "name": "PHP",
              },
              "py": Object {
                "key": "py",
                "name": "Python",
              },
            }
          }
          property="languages"
          query={
            Object {
              "languages": null,
            }
          }
          router={
            Object {
              "push": [Function],
            }
          }>
          <Select
            addLabelText="Add \"{label}\"?"
            arrowRenderer={[Function]}
            autosize={true}
            backspaceRemoves={true}
            backspaceToRemoveMessage="Press backspace to remove {label}"
            className="input-super-large"
            clearAllText="Clear all"
            clearValueText="Clear value"
            clearable={false}
            delimiter=","
            disabled={false}
            escapeClearsValue={true}
            filterOptions={[Function]}
            ignoreAccents={true}
            ignoreCase={true}
            inputProps={Object {}}
            isLoading={false}
            joinValues={false}
            labelKey="label"
            matchPos="any"
            matchProp="any"
            menuBuffer={0}
            menuRenderer={[Function]}
            multi={false}
            noResultsText="No results found"
            onBlurResetsInput={true}
            onChange={[Function]}
            onCloseResetsInput={true}
            openAfterFocus={false}
            optionComponent={[Function]}
            options={
              Array [
                Object {
                  "label": "Flex",
                  "value": "flex",
                },
                Object {
                  "label": "PHP",
                  "value": "php",
                },
                Object {
                  "label": "Python",
                  "value": "py",
                },
              ]
            }
            pageSize={5}
            placeholder="search_verb"
            required={false}
            scrollMenuIntoView={true}
            searchable={true}
            simpleValue={false}
            tabSelectsValue={true}
            valueComponent={[Function]}
            valueKey="value">
            <div
              className="Select input-super-large Select--single is-searchable">
              <div
                className="Select-control"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}>
                <span
                  className="Select-multi-value-wrapper"
                  id="react-select-2--value">
                  <div
                    className="Select-placeholder">
                    search_verb
                  </div>
                  <AutosizeInput
                    aria-activedescendant="react-select-2--value"
                    aria-expanded="false"
                    aria-haspopup="false"
                    aria-owns=""
                    className="Select-input"
                    minWidth="5px"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    role="combobox"
                    value="">
                    <div
                      className="Select-input"
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }>
                      <input
                        aria-activedescendant="react-select-2--value"
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-owns=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          Object {
                            "boxSizing": "content-box",
                            "width": "5pxpx",
                          }
                        }
                        value="" />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        } />
                    </div>
                  </AutosizeInput>
                </span>
                <span
                  className="Select-arrow-zone"
                  onMouseDown={[Function]}>
                  <span
                    className="Select-arrow"
                    onMouseDown={[Function]} />
                </span>
              </div>
            </div>
          </Select>
        </SearchableFilterFooter>
      </div>
    </div>
  </Filter>
</LanguagesFilter>
`;
